# Home_works_WEB

Clean_folder_threads/: no_threads.py  sort_folder_treads.py
HTTP_server/: README.md  main.py  pyproject.toml
NoSQL Data Bases/: README.md  pyproject.toml
NoSQL Data Bases/Part_one_MongoDB/: config.ini  connect.py  finder.py  models.py  seeds.py
NoSQL Data Bases/Part_two_ RabbitMQ/: connect.py  consumer_email.py  consumer_main_task.py  consumer_sms.py  find_status.py  model.py  producer_add_task.py  producer_main_task.py  seeds.py  send_message.py
ORM SQLAlchemy/: README.md  config.ini  main.py  pyproject.toml
ORM SQLAlchemy/alembic/: env.py
ORM SQLAlchemy/alembic/versions/: 360ef6f12cb5_init.py  a859b81e74ff_init.py  ef76ed1aa06e_init.py
ORM SQLAlchemy/database/: db.py  models.py
ORM SQLAlchemy/seeds/: disciplines.py  grades.py  groups.py  students.py  teachers.py
Privat_currency_rate/: exchangeRate.json  main.py  pyproject.toml
Quotes for scraping Web on Django/: README.md  pyproject.toml
Quotes for scraping Web on Django with reset password/: README.md  pyproject.toml
REST API on FAST API/: README.md  main.py  pyproject.toml
REST API on FAST API with Auth/: README.md  main.py  pyproject.toml
REST API on FAST API with Auth verif email CORS Avatar Tests/: README.md  config.ini  main.py  pyproject.toml  test.db
REST API on FAST API with Auth verif email CORS Avatar Tests/docs/: conf.py
REST API on FAST API with Auth verif email CORS Avatar Tests/docs/_build/doctrees/: environment.pickle  index.doctree
REST API on FAST API with Auth verif email CORS Avatar Tests/docs/_build/html/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
REST API on FAST API with Auth verif email CORS Avatar Tests/docs/_build/html/_sources/: index.rst.txt
REST API on FAST API with Auth verif email CORS Avatar Tests/htmlcov/: d_145eef247bfb46b6_shemas_py.html  d_33ea1954bbe60e2e_auth_py.html  d_67d056e3707ef46d_connect_db_py.html  d_67d056e3707ef46d_models_py.html  d_91a712da898ee42e_auth_py.html  d_91a712da898ee42e_contacts_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_test_route_auth_py.html  d_a44f0ac069e85531_test_route_contacts_py.html  d_a44f0ac069e85531_test_unit_repository_contacts_py.html  d_a44f0ac069e85531_test_unit_repository_users_py.html  d_d23880557e337f5c_contacts_py.html  d_d23880557e337f5c_users_py.html  d_e8317fb604e6de26_config_py.html  index.html  main_py.html  status.json
REST API on FAST API with Auth verif email CORS Avatar Tests/migration/versions/: 26066d6f69d7_init.py
REST API on FAST API with Auth verif email CORS Avatar Tests/src/: send-email.py  shemas.py
REST API on FAST API with Auth verif email CORS Avatar Tests/src/database/: connect_db.py
REST API on FAST API with Auth verif email CORS Avatar Tests/src/repository/: contacts.py  users.py
REST API on FAST API with Auth verif email CORS Avatar Tests/src/routes/: auth.py  contacts.py  users.py
REST API on FAST API with Auth verif email CORS Avatar Tests/src/services/: auth.py  email.py
REST API on FAST API with Auth verif email CORS Avatar Tests/tests/: conftest.py  test.db  test_route_auth.py  test_route_contacts.py  test_unit_repository_contacts.py  test_unit_repository_users.py
REST API on FAST API/migrations/: env.py
REST API on FAST API/migrations/versions/: a3872210a75f_init.py
REST API on FAST API/src/: shemas.py
REST API on FAST API/src/database/: models.py
REST API on FAST API/src/repository/: contacts.py
REST API on FAST API/src/routes/: contacts.py
Relational databases/: create_db.py  education.db  education_data.sql  fill_data.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql
Web scraping with Scrapy/: README.md  authors.json  main.py  pyproject.toml  quotes.json
factorize_treads/: factorize_treads.py
(+48 files in other folders)
