[tool.poetry]
name = "home-work-8"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "home_work_8"}]

[tool.poetry.dependencies]
python = "^3.10"
pika = "^1.3.1"
pymongo = {extras = ["srv", "tls"], version = "^4.3.3"}
mongoengine = "^0.26.0"
redis = "^4.4.2"
redis-lru = "^0.1.2"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
