[tool.poetry]
name = "home-work-7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "home_work_7"}]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.2"
sqlalchemy = "^1.4.46"
psycopg2 = "^2.9.5"
faker = "^16.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
