[tool.poetry]
name = "home-work-5"
version = "0.1.0"
description = ""
authors = ["Serhii-Kravchenko-2022 <skravchenko20@gmail.com>"]
readme = "README.md"
packages = [{include = "home_work_5"}]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.3"
aiofiles = "^22.1.0"
aiopath = "^0.6.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
