[tool.poetry]
name = "home-work-11-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "home_work_11_1"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
sqlalchemy = "^2.0.4"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
psycopg2 = "^2.9.5"
python-multipart = "^0.0.6"
alembic = "^1.9.3"
pydantic = {extras = ["email"], version = "^1.10.5"}
libgravatar = "^1.0.3"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
redis = "^4.5.1"
asyncio = "^3.4.3"
fastapi-mail = "^1.2.6"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.32.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^6.1.3"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
pytest-cov = "^4.0.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
